--- a/Games/Unity/Oxide.Game.Hurtworld/Hurtworld.csproj
+++ b/Games/Unity/Oxide.Game.Hurtworld/Hurtworld.csproj
@@ -67,8 +67,10 @@
     <Compile Include="Libraries\Covalence\HurtworldPlayerManager.cs" />
     <Compile Include="Libraries\Covalence\HurtworldServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="HurtworldCommands.cs" />
     <Compile Include="HurtworldCore.cs" />
     <Compile Include="HurtworldExtension.cs" />
+    <Compile Include="HurtworldHooks.cs" />
     <Compile Include="HurtworldPlugin.cs" />
     <Compile Include="HurtworldPluginLoader.cs" />
   </ItemGroup>
